re-initialized with node 16 version

--- a/src/app/components/experiences-container/experiences-container.component.html
+++ b/src/app/components/experiences-container/experiences-container.component.html
@@ -1,2 +1,4 @@
-<app-experience-head></app-experience-head>
-<app-experience-content></app-experience-content>
+<div class="out" data-aos="flip-up" data-aos-offset="200" data-aos-delay="50" data-aos-duration="1500">
+    <app-experiences-head></app-experiences-head>
+    <router-outlet></router-outlet>
+</div>
