--- a/src/app/components/experiences-content/experiences-content.component.html
+++ b/src/app/components/experiences-content/experiences-content.component.html
@@ -1,1 +1,11 @@
-<p>experiences-content works!</p>
+<div class="out">
+    <div class="content" data-aos="flip-up"data-aos-offset="200" data-aos-delay="50" data-aos-duration="1500">
+        <h2 class="string">{{tag}}</h2>
+        <div class="content" fxLayout="row wrap" fxLayoutGap="1.5% grid">
+            <div *ngFor="let experience of experiences">
+                <app-experience-card title={{experience.title}} note={{experience.note}} url={{experience.urle}}></app-experience-card>
+            </div>
+        </div>
+        <p></p>
+    </div>
+</div>
