--- a/src/app/components/experiences-head/experiences-head.component.html
+++ b/src/app/components/experiences-head/experiences-head.component.html
@@ -1,1 +1,9 @@
-<p>experience-head works!</p>
+<div class="header-container">
+    <header class="string-align">
+        <nav class="string" >
+            <div *ngFor="let tag of tags">
+                <a [routerLink]="['/experience', tag.tag ]">{{tag.tag}}</a>
+            </div>
+        </nav>
+    </header>
+</div>
