Working on S3 at last

--- a/src/app/components/experiences-head/experiences-head.component.html
+++ b/src/app/components/experiences-head/experiences-head.component.html
@@ -1,8 +1,10 @@
 <div class="header-container">
     <header class="string-align">
         <nav class="string" >
-            <div *ngFor="let tag of tags">
-                <a [routerLink]="['/experience', tag.tag ]">{{tag.tag}}</a>
+            <div class="content" fxLayout="row wrap" fxLayoutGap="1.5% grid">
+                <div *ngFor="let tag of tags">
+                    <a [routerLink]="['/experience', tag.tag]">{{tag.tag}}</a>
+                </div>
             </div>
         </nav>
     </header>
